--- a/SportiduinoManager/app/src/main/res/values/errors.xml
+++ b/SportiduinoManager/app/src/main/res/values/errors.xml
@@ -25,4 +25,5 @@
     <string name="err_bt_bad_point_number">Incorrect number of active point</string>
 
     <string name="err_init_no_such_team">No team with this number</string>
+    <string name="err_init_empty_team">A team should consist of 1 or more members</string>
 </resources>
