SportiduinoManager: replace DownloadedManager with HttpURLConnection

--- a/SportiduinoManager/app/src/main/res/values-ru/errors.xml
+++ b/SportiduinoManager/app/src/main/res/values-ru/errors.xml
@@ -7,9 +7,9 @@
     <string name="err_db_bad_email">Некорректный Email</string>
     <string name="err_db_empty_password">Пароль не может быть пустым</string>
     <string name="err_db_download_waiting">Предыдущий запрос к сайту еще не завершен</string>
-    <string name="err_db_download_failed">Скачивание данных завершилось неуспешно: </string>
     <string name="err_db_reading_response">Ошибка чтения при обработке ответа сервера</string>
     <string name="err_db_bad_response">Некорректное содержимое в ответе сервера</string>
+    <string name="err_db_internal_error">Неожиданная внутренняя ошибка</string>
     <string name="err_db_no_distance_loaded">Не загружена дистанция с сайта</string>
 
     <string name="err_bt_absent">Устройство не поддерживает Bluetooth</string>
