--- a/SportiduinoManager/app/src/main/res/values/errors.xml
+++ b/SportiduinoManager/app/src/main/res/values/errors.xml
@@ -7,9 +7,9 @@
     <string name="err_db_bad_email">Bad Email format</string>
     <string name="err_db_empty_password">Password can not be empty</string>
     <string name="err_db_download_waiting">Previous request has not completed yet</string>
-    <string name="err_db_download_failed">Data download failed: </string>
     <string name="err_db_reading_response">I/O error while reading server response</string>
     <string name="err_db_bad_response">Error in response format</string>
+    <string name="err_db_internal_error">Unexpected internal error</string>
     <string name="err_db_no_distance_loaded">Distance was not loaded from site</string>
 
     <string name="err_bt_absent">Device does not support Bluetooth</string>
