SportiduinoManager: send test chip events to site

--- a/SportiduinoManager/app/src/main/res/layout/activity_database.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_database.xml
@@ -50,6 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clickable="false"
+                android:onClick="startChipEventsUpload"
                 android:padding="@dimen/default_padding"
                 android:text="@string/send_results" />
 
