--- a/SportiduinoManager/app/src/main/res/layout/activity_bluetooth.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_bluetooth.xml
@@ -2,11 +2,12 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-    <android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -58,7 +59,7 @@
             android:id="@+id/station_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:constraint_referenced_ids="connected_station,station_bt_name,station_bt_response,station_mode,station_mode_value,station_new_mode,station_spinner,station_change_mode,station_time_drift,station_sync_time,station_chips_registered,station_chips_registered_value,station_last_chip,station_last_chip_time" />
+            app:constraint_referenced_ids="connected_station,station_bt_name,station_bt_response,station_mode,station_mode_value,station_point_and_mode,station_change_mode,station_time_drift,station_sync_time,station_chips_registered,station_chips_registered_value,station_last_chip,station_last_chip_time" />
 
         <TextView
             android:id="@+id/connected_station"
@@ -114,26 +115,55 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/station_mode" />
 
-        <TextView
-            android:id="@+id/station_new_mode"
+        <TableLayout
+            android:id="@+id/station_point_and_mode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_padding"
-            android:text="@string/station_new_mode"
-            android:textColor="@color/text_primary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/station_mode_value" />
+            app:layout_constraintTop_toBottomOf="@+id/station_mode_value">
 
-        <Spinner
-            android:id="@+id/station_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/station_new_mode" />
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/station_new_point"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="@string/station_new_point"
+                    android:textColor="@color/text_primary" />
+
+                <TextView
+                    android:id="@+id/station_new_mode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="@string/station_new_mode"
+                    android:textColor="@color/text_primary" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Spinner
+                    android:id="@+id/station_point_spinner"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content" />
+
+                <Spinner
+                    android:id="@+id/station_mode_spinner"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content" />
+
+            </TableRow>
+
+        </TableLayout>
 
         <Button
             android:id="@+id/station_change_mode"
@@ -145,7 +175,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/station_spinner" />
+            app:layout_constraintTop_toBottomOf="@+id/station_point_and_mode" />
 
         <TextView
             android:id="@+id/station_time_drift"
