--- a/SportiduinoManager/app/src/main/res/values/dimens.xml
+++ b/SportiduinoManager/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
 <resources>
     <dimen name="default_padding">16dip</dimen>
     <dimen name="default_key_button_width">64dip</dimen>
+    <dimen name="min_points_list_width">96dip</dimen>
 </resources>
