--- a/SportiduinoManager/app/src/main/res/layout/activity_chipinit.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_chipinit.xml
@@ -235,7 +235,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/init_team_chip" />
 
-        <android.support.v7.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/member_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
