--- a/SportiduinoManager/app/src/main/res/layout/team_list_item.xml
+++ b/SportiduinoManager/app/src/main/res/layout/team_list_item.xml
@@ -1,42 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="48dp"
+    android:background="@drawable/list_selector"
+    android:clickable="true"
+    android:focusable="true">
 
-    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/list_team_name"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:gravity="start|center_vertical"
+        android:text="@string/ap_team_name"
+        app:layout_constraintEnd_toStartOf="@id/list_team_count"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/list_team_name"
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:text="@string/ap_team_name"
-            app:layout_constraintEnd_toStartOf="@id/list_team_count"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/list_team_count"
+        android:layout_width="32dp"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/list_team_count"
+        app:layout_constraintEnd_toStartOf="@id/list_team_time"
+        app:layout_constraintStart_toEndOf="@id/list_team_name"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/list_team_count"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="@string/list_team_count"
-            app:layout_constraintEnd_toStartOf="@id/list_team_time"
-            app:layout_constraintStart_toEndOf="@id/list_team_name"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/list_team_time"
+        android:layout_width="112dp"
+        android:layout_height="match_parent"
+        android:gravity="center|end"
+        android:text="@string/list_team_time"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/list_team_count"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/list_team_time"
-            android:layout_width="160dp"
-            android:layout_height="match_parent"
-            android:text="@string/list_team_time"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/list_team_count"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </android.support.constraint.ConstraintLayout>
-
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
