--- a/SportiduinoManager/app/src/main/res/layout/team_list_item.xml
+++ b/SportiduinoManager/app/src/main/res/layout/team_list_item.xml
@@ -12,6 +12,7 @@
         android:id="@+id/list_team_name"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/default_padding"
         android:gravity="start|center_vertical"
         android:text="@string/ap_team_name"
         app:layout_constraintEnd_toStartOf="@id/list_team_count"
@@ -32,6 +33,7 @@
         android:id="@+id/list_team_time"
         android:layout_width="112dp"
         android:layout_height="match_parent"
+        android:layout_marginEnd="@dimen/default_padding"
         android:gravity="center|end"
         android:text="@string/list_team_time"
         app:layout_constraintEnd_toEndOf="parent"
