--- a/SportiduinoManager/app/src/main/res/drawable/list_selector.xml
+++ b/SportiduinoManager/app/src/main/res/drawable/list_selector.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-  <item android:drawable="@color/bg_primary_light" android:state_pressed="true"/>
-  <item android:drawable="@color/bg_primary" android:state_selected="true"/>
-  <item android:drawable="@color/bg_secondary" android:state_focused="true"/>
+  <item android:drawable="@color/bg_primary_light" android:state_selected="true"/>
 </selector>
