--- a/SportiduinoManager/app/src/main/res/layout/activity_activepoint.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_activepoint.xml
@@ -63,6 +63,26 @@
         app:layout_constraintTop_toBottomOf="@+id/ap_team_name" />
 
     <TextView
+        android:id="@+id/ap_visited"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/default_padding"
+        android:text="@string/ap_visited"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ap_team_time" />
+
+    <TextView
+        android:id="@+id/ap_skipped"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/default_padding"
+        android:text="@string/ap_skipped"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ap_visited" />
+
+    <TextView
         android:id="@+id/ap_members_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -72,8 +92,7 @@
         android:textAppearance="@style/AppTheme.TextMedium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ap_team_time" />
-
+        app:layout_constraintTop_toBottomOf="@+id/ap_skipped" />
 
     <View
         android:id="@+id/ap_divider_2"
