--- a/SportiduinoManager/app/src/main/res/layout/activity_chipinit.xml
+++ b/SportiduinoManager/app/src/main/res/layout/activity_chipinit.xml
@@ -207,21 +207,38 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_padding"
             android:textColor="@color/bg_secondary"
-            android:visibility="gone"
+            android:text="@string/unknown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/init_team_maps" />
 
-        <Button
-            android:id="@+id/init_team_chip"
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:id="@+id/init_team_chip_frame"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_padding"
-            android:onClick="initChip"
-            android:text="@string/init_team_chip"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/init_team_maps" />
+            app:layout_constraintTop_toBottomOf="@+id/init_error"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_bias="0.5">
+
+            <Button
+                android:id="@+id/init_team_chip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:onClick="initChip"
+                android:text="@string/init_team_chip" />
+
+            <ProgressBar
+                android:id="@+id/init_team_chip_progress"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="invisible" />
+        </FrameLayout>
 
         <TextView
             android:id="@+id/init_members_count"
@@ -233,7 +250,7 @@
             android:textAppearance="@style/AppTheme.TextMedium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/init_team_chip" />
+            app:layout_constraintTop_toBottomOf="@+id/init_team_chip_frame" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/member_list"
